Resolves overflow for choice questions

--- a/Survey/source/styles/_a-icon-multistate.scss
+++ b/Survey/source/styles/_a-icon-multistate.scss
@@ -3,7 +3,7 @@
 .a-icon-multistate {
     display: inline-block;
     width: 18px;
-    height: 18px;
+    height: 17px;
     background-position-y: -28px;
 }
 
