--- a/Survey/styles/base.css
+++ b/Survey/styles/base.css
@@ -609,7 +609,7 @@ button.a-button-list-dropdown {
 .a-icon-multistate {
   display: inline-block;
   width: 18px;
-  height: 18px;
+  height: 17px;
   background-position-y: -28px;
 }
 
